# gwasm

./: .gitignore  CMakeLists.txt  Makefile  code_gen.c  code_gen.h  helpers.c  helpers.h  lexer.l  main.c  parser.y
include/: helpers.h
src/: helpers.c  main.c
test/: fib.s
